Fix broken modal
Previously the modal wasn't centered correctly. I figured out that
margin: auto, was causing it to be shifted to the right making
the modal uneven.

--- a/style.css
+++ b/style.css
@@ -10,16 +10,21 @@
 body,
 html {
     height: 100vh;
+    margin: 0;
+    padding: 0;
 }
 
 /* Utils */
 body {
     font-family: Arial, sans-serif;
+}
+
+.container {
     display: grid;
     grid-template-rows: 150px 1fr 1fr;
 }
 
-body > * {
+.container > * {
     justify-self: center;
 }
 
@@ -67,15 +72,13 @@ body > * {
 
 /* Modals */
 .modal {
-    width: 400px;
-    height: auto;
+    width: 400px;   
     padding: 2rem;
     padding-bottom: 3rem;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-110%, -50%); 
-    margin: auto;
+    transform: translate(-50%, -50%); 
     border-radius: 5%;
 }
 
